Email overflow fixed

--- a/src/components/Mail/Email.css
+++ b/src/components/Mail/Email.css
@@ -16,7 +16,7 @@
     background-color:white;
     margin: 30px;
     padding: 20px;
-    height: 100vh;
+    height: 77vh;
     box-shadow: 0px 05px 07px rgba(0,0,0,0.24);
 }
 .mail__bodyHeader {
